--- a/ToDoItemApi/appsettings.json
+++ b/ToDoItemApi/appsettings.json
@@ -9,5 +9,12 @@
 
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=DESKTOP-HFSOFV4;Initial Catalog=ToDoDb;Integrated Security=True;TrustServerCertificate=True;"
+  },
+
+  "JwtSettings": {
+    "Key": "this_is_my_super_secret_key_12345", 
+    "Issuer": "ToDoApi",
+    "Audience": "ToDoApiUser",
+    "ExpiresInMinutes": 60
   }
 }
