--- a/ToDoItemApi/appsettings.Development.json
+++ b/ToDoItemApi/appsettings.Development.json
@@ -1,8 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-HFSOFV4;Initial Catalog=ToDoDb;Integrated Security=True;TrustServerCertificate=True;"
+  },
+
+  "JwtSettings": {
+    "Key": "leVfxryy6ywySeiSwqZ55a1nuDPU88o4mOX2FS8Jhu8=",
+    "Issuer": "ToDoApi",
+    "Audience": "ToDoApiUser",
+    "ExpiresInMinutes": 60
   }
 }
