--- a/ToDoItemApi/appsettings.json
+++ b/ToDoItemApi/appsettings.json
@@ -5,16 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-HFSOFV4;Initial Catalog=ToDoDb;Integrated Security=True;TrustServerCertificate=True;"
-  },
-
-  "JwtSettings": {
-    "Key": "leVfxryy6ywySeiSwqZ55a1nuDPU88o4mOX2FS8Jhu8=",
-    "Issuer": "ToDoApi",
-    "Audience": "ToDoApiUser",
-    "ExpiresInMinutes": 60
-  }
+  "AllowedHosts": "*"
 }
